<resources>
    <string name="app_name">Database Demo</string>
    <string name="create_account_name">Create Account</string>
    <string name="sign_in_name">Sign In</string>

    <string name="sign_in_button">Sign In</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="edit_info_button">Edit Account</string>
    <string name="create_account_button">Create Account</string>
    <string name="finish_create_button">Continue</string>
    <string name="finish_edit_button">Continue</string>

    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="input_phone">Phone</string>
    <string name="input_address">Address</string>

    <string name="new_email">Enter a new email address.\nCurrent email: %1$s</string>
    <string name="new_phone">Enter a new phone number.\nCurrent number: %1$s</string>

    <string name="current_username">Username: %1$s</string>
    <string name="current_email">Email: %1$s</string>
    <string name="current_phone">Phone Number: %1$s</string>
    <string name="current_rating">Rating: %1$s</string>
    <string name="current_number_of_ratings">Number of Ratings: %1$s</string>

    <string name="confirm_request">Confirm Request</string>
    <string name="cancel_request">Cancel Request</string>

    <string name="driver_confirm_rider_username">Rider Username: %1$s</string>
    <string name="driver_confirm_ride_fare">Ride Fare: %1$s Dollars</string>
    <string name="driver_to_rider_distance">Distance to Rider: %1$s Kilometers</string>
    <string name="driver_confirm_ride_distance">Ride Distance: %1$s Kilometers</string>

    <string name="rider_confirm_driver_username">Username: %1$s</string>
    <string name="rider_confirm_driver_phone_number">Phone Number: %1$s</string>
    <string name="rider_confirm_driver_email">Email: %1$s</string>

    <string name="show_username">Username: %1$s</string>
    <string name="show_email">Email: %1$s</string>
    <string name="show_phone">Phone Number: %1$s</string>
    <string name="show_address">Address: %1$s</string>
    <string name="show_rating">Rating: %1$s</string>
    <string name="make_request">Make Request</string>

</resources>
